feat: show doctor info on all pages, 12 specialties everywhere
- main.html: add Эндокринолог, Гинеколог, Уролог, Психиатр to specialtySelect
- script.js (status): show doctor name + cabinet under specialty block
- profile.html: show doctor name + cabinet in appointment card
- recording.html: CSS classes for .doctor-card hover/selected state
- recording.html: use .spec-count CSS class for doctor count badge
- selectDoctor: use classList instead of inline styles

--- a/стартап/startup/html/main.html
+++ b/стартап/startup/html/main.html
@@ -209,6 +209,14 @@
 
                 <option>Дерматолог</option>
 
+                <option>Эндокринолог</option>
+
+                <option>Гинеколог</option>
+
+                <option>Уролог</option>
+
+                <option>Психиатр</option>
+
               </select>
 
             </label>
