fix: use real GPS coords per hospital name, fix 2 wrong addresses (GKB7, BSMP)

--- a/стартап/startup/html/main.html
+++ b/стартап/startup/html/main.html
@@ -165,29 +165,54 @@
   </footer>
 
   <script>
-  // Approximate coordinates spread across Almaty districts
-  const ALMATY_POINTS = [
-    [43.267, 76.886], [43.252, 76.957], [43.221, 76.858], [43.195, 76.905],
-    [43.305, 77.012], [43.188, 76.810], [43.325, 76.938], [43.241, 76.892],
-    [43.258, 76.910], [43.233, 76.945], [43.212, 76.877], [43.278, 76.995],
-    [43.199, 76.838], [43.314, 76.963], [43.247, 76.870], [43.264, 76.930],
-    [43.228, 76.920], [43.290, 77.030], [43.183, 76.855], [43.337, 76.920],
-    [43.255, 76.880], [43.240, 76.968], [43.210, 76.845], [43.202, 76.918],
-    [43.298, 77.005], [43.175, 76.800], [43.319, 76.950], [43.245, 76.899],
-    [43.260, 76.940], [43.220, 76.900], [43.285, 76.978],
+  // GPS-координаты больниц Алматы (по реальным адресам)
+  const HOSPITAL_COORDS = {
+    'Городская поликлиника №1':                [43.247, 76.838],
+    'Городская поликлиника №2':                [43.264, 76.910],
+    'Городская поликлиника №3':                [43.213, 76.854],
+    'Городская поликлиника №4':                [43.204, 76.886],
+    'Городская поликлиника №5':                [43.255, 76.907],
+    'Городская поликлиника №6':                [43.229, 76.922],
+    'Городская поликлиника №7':                [43.256, 76.883],
+    'Городская поликлиника №9':                [43.280, 76.961],
+    'Городская поликлиника №12':               [43.218, 76.940],
+    'Городская поликлиника №15':               [43.282, 77.038],
+    'Детская поликлиника №1':                  [43.256, 76.930],
+    'Детская поликлиника №3':                  [43.249, 76.902],
+    'Детская поликлиника №4':                  [43.248, 76.820],
+    'Детская поликлиника №6':                  [43.226, 76.878],
+    'Городская клиническая больница №1':       [43.261, 76.909],
+    'Городская клиническая больница №4':       [43.268, 76.904],
+    'Городская клиническая больница №7':       [43.232, 76.920],
+    'Центральная городская клиническая больница': [43.253, 76.897],
+    'Больница скорой медицинской помощи':      [43.255, 76.929],
+    'Городская поликлиника ветеранов ВОВ':     [43.260, 76.915],
+    'Стоматологическая поликлиника №1':        [43.249, 76.921],
+    'Стоматологическая поликлиника №3':        [43.236, 76.931],
+    'Кожно-венерологический диспансер':        [43.248, 76.953],
+    'Противотуберкулезный диспансер':          [43.243, 76.876],
+    'Медицинский центр «Медеу»':               [43.214, 76.948],
+    'Клиника «Асем»':                          [43.253, 76.898],
+    'Медицинский центр «Interteach»':          [43.247, 76.923],
+    'Клиника «VITA»':                          [43.228, 76.942],
+    'Медицинский центр «Нур-Медикус»':         [43.225, 76.920],
+  };
+  // Резервные координаты на случай нового учреждения
+  const FALLBACK_POINTS = [
+    [43.238, 76.889], [43.270, 76.930], [43.200, 76.860], [43.290, 77.010],
   ];
 
   const HOSPITAL_ICONS = { 'Поликлиника': '🏥', 'Больница': '🏨', 'Детская': '👶', 'Спец. клиника': '⚕️' };
 
   function buildMap(hosp) {
     const map = L.map('hospitalsMap', { zoomControl: true, scrollWheelZoom: false })
-      .setView([43.238, 76.889], 11);
+      .setView([43.238, 76.900], 12);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '© <a href="https://openstreetmap.org">OpenStreetMap</a>',
       maxZoom: 18,
     }).addTo(map);
     hosp.forEach(function(h, i) {
-      const coords = ALMATY_POINTS[i % ALMATY_POINTS.length];
+      const coords = HOSPITAL_COORDS[h.name] || FALLBACK_POINTS[i % FALLBACK_POINTS.length];
       const icon = HOSPITAL_ICONS[h.type] || '🏥';
       L.marker(coords, { title: h.name }).addTo(map)
         .bindPopup(
